# mihomo-tui

./: Cargo.toml
.cargo/: config.toml
src/: app.rs  event.rs  main.rs
src/components/: mod.rs  profiles.rs  status.rs
src/config/: mod.rs  profile.rs  tui.rs
src/utils/: api.rs  logger.rs  mod.rs  path.rs  script.rs
