[package]
name = "mihomo-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "5.0.1"
reqwest = "0.12.9"
serde_json = "1.0.133"

[dependencies.serde]
version = "1.0.215"
features = ["derive"]

[dependencies.tokio]
version = "1.41.1"
features = ["full"]

[dependencies.uuid]
version = "1.11.0"
features = ["v4"]
