[package]
name = "mihomo-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
boa_engine = "0.20.0"
boa_runtime = "0.20.0"
chrono = "0.4.38"
directories = "5.0.1"
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
ratatui = "0.29.0"
reqwest = "0.12.9"
serde_json = "1.0.133"
serde_yaml = "0.9.34"
urlencoding = "2.1.3"

[dependencies.crossterm]
version = "0.28.1"
features = ["event-stream"]

[dependencies.serde]
version = "1.0.215"
features = ["derive"]

[dependencies.tokio]
version = "1.41.1"
features = ["full"]

[dependencies.uuid]
version = "1.11.0"
features = ["v4"]
